align section list with flex fix section list ui to allow scroll if reflect dimensions

--- a/src/components/Layouts/ReportLayout.less
+++ b/src/components/Layouts/ReportLayout.less
@@ -171,13 +171,13 @@ h1 {
           overflow-x: hidden;
         }
 
-        .section-table, .section-markdown {
+        .section-table, .section-markdown, .section-list {
           height: inherit;
           overflow-y: auto;
         }
 
         @media print {
-          .section-table, .section-markdown  {
+          .section-table, .section-markdown, .section-list {
             overflow-y: hidden;
           }
 
